# game_of_life

./: README.md
cmake/: CMakeLists.txt
installer/script/: installer.iss
source/: CMakeLists.txt  game_of_life_algorithm.cpp  game_of_life_algorithm.h  main.cpp  resources_loader.h
